--- a/layers/+window-management/perspectives/README.org
+++ b/layers/+window-management/perspectives/README.org
@@ -3,19 +3,27 @@
 * Table of Contents                                                   :TOC@4:
  - [[#description][Description]]
  - [[#install][Install]]
-     - [[#layer][Layer]]
-     - [[#custom-perspective-macro][Custom Perspective Macro]]
- - [[#predefined-custom-perspectives][Predefined custom perspectives]]
-         - [[#per-project-custom-perpsective][Per project custom perpsective]]
-         - [[#org-agenda-custom-perspective][Org-agenda custom perspective]]
-         - [[#rcirc-custom-perspective][RCIRC custom perspective]]
- - [[#key-bindings][Key Bindings]]
-     - [[#custom-perspectives-key-bindings][Custom Perspectives Key Bindings]]
+   - [[#layer][Layer]]
+ - [[#features-][Features ]]
+   - [[#micro-states][Micro-states]]
+     - [[#perspective-management-micro-state][Perspective Management Micro State]]
+     - [[#custom-perspectives-micro-state][Custom Perspectives Micro State]]
+   - [[#per-project-custom-perpsective][Per project custom perpsective]]
+   - [[#saveload-perspectives-into-a-file][Save/Load perspectives into a file]]
+   - [[#custom-perspective-macro][Custom Perspective Macro]]
+   - [[#predefined-custom-perspectives][Predefined custom perspectives]]
+     - [[#org-agenda-custom-perspective][Org-agenda custom perspective]]
+     - [[#rcircerc-custom-perspective][RCIRC/ERC custom perspective]]
+ - [[#configuration][Configuration]]
+   - [[#removing-additional-help][Removing additional help]]
 
 * Description
 
-This contrib layer sets up perspective-mode. And also defines custom
-perspectives with a macro so that you don't have to do more steps.
+This contribution layer adds perspectives to Spacemacs. Perspectives are window
+configurations that have buffer isolation between each other. At the beginning
+there is a ~@Home~ perspective which will contain all buffers. It is recommended
+that you leave this perspective alone, and use others. It is possible to kill
+the ~@Home~ perspective but, as a zerg, it will come back.
 
 * Install
 
@@ -27,17 +35,72 @@ To use this contribution add it to your =~/.spacemacs=
   (setq-default dotspacemacs-configuration-layers '(perspectives))
 #+END_SRC
 
+* Features 
+
+** Micro-states
+*** Perspective Management Micro State
+
+Prefix command for perspective management commands is ~SPC L~ (for Layout).
+
+| Key Binding            | Description                                     |
+|------------------------+-------------------------------------------------|
+| ~SPC L K~              | Remove buffer from perspective                  |
+| ~SPC L i~              | import all buffers from other perspective       |
+| ~SPC L t~              | display buffer without adding it to perspective |
+| ~SPC L a~              | add buffer to current perspective               |
+| ~SPC L x~              | kill current perspective with its buffers       |
+| ~SPC L X~              | kill other perspective with its buffers         |
+| ~SPC L c~              | close current perspective and keep buffers      |
+| ~SPC L C~              | close other perspective and keep buffers        |
+| ~SPC L n~              | switch to next perspective                      |
+| ~SPC L o~              | open a custom perspective                       |
+| ~SPC L N~ or ~SPC W p~ | switch to previous perspective                  |
+| ~SPC L r~              | rename perspective                              |
+| ~SPC L s~              | switch perspective                              |
+
+*** Custom Perspectives Micro State
+
+The default bindings are the following:
+
+| Key Binding | Description                                              |
+|-------------+----------------------------------------------------------|
+| ~SPC L o e~ | Emacs custom perspective                                 |
+| ~SPC L o E~ | ERC custom perspective (needs the erc layer enabled)     |
+| ~SPC L o i~ | RCIRC custom perspective (needs the rcirc layer enabled) |
+| ~SPC L o o~ | Org custom perspective                                   |
+
+You can of course add more custom perspectives by using the
+~spacemacs|define-custom-perspective~ macro explained further below.
+
+** Per project custom perpsective
+
+As the name suggests, this persp-projectile mode creates a new perspective once
+you switch to a new project with ~SPC L P~. But will nor bridge the ~SPC p p~
+projectile command as the persp-projectile package this layer used to use.
+Instead if you want to open a project and create or switch to its perspective
+you have to use ~SPC L P~ and you can use ~SPC p p~ anywhere without changing
+perspectives.
+
+** Save/Load perspectives into a file
+
+With ~SPC L s~ and ~SPC L l~ you can save and load perspectives to a file this
+is done without configuration, support is great for emacs 24.4, but depends on
+=workgroups.el= for Emacs <= 24.3.
+
 ** Custom Perspective Macro
 
 If you want to add a new custom-persp (for example if you want to have
 IRC on its own perspective or maybe calendar or gnus) you have to use
-the macro =custom-persp= as follows:
+the macro =spacemacs|define-custom-persp= as follows:
 
 #+BEGIN_SRC emacs-lisp
-  (defun custom-persp/<persp-function-name> ()
-  (interactive)
-  (custom-persp "<name-to-be-shown-in-the-modeline>"
-      (... stuff to be done in the persp activating a major mode like twittering or whatever ...)))
+  (spacemacs|define-custom-persp "<name-to-be-shown-in-the-modeline>"
+    :binding "<bind-key>"
+    :body
+    (...)
+    (stuff to be done in the persp activating)
+    (a major mode like twittering-mode or whatever)
+    (...))
 #+END_SRC
 
 You can check out the layer's packages.el to see some examples of the
@@ -45,38 +108,20 @@ custom-perspectives. if you define something like this you may be able
 to define a perspective with a layout.
 
 #+BEGIN_SRC emacs-lisp
-  (defun custom-persp/c++-project ()
-  (interactive)
-  (custom-persp "c++"
-      (progn
-          (find-file "~/path/to/first/file.cpp")
-          (split-window-right)
-          (find-file "~/path/to/second/file.cpp")
-          (... do more stuff but be careful not to destroy the universe ...)
-      )))
+  (spacemacs|define-custom-persp "c++"
+    :binding "+"
+    :body
+    (find-file "~/path/to/first/file.cpp")
+    (split-window-right)
+    (find-file "~/path/to/second/file.cpp")
+    (... do more stuff but be careful not to destroy the universe ...))
 #+END_SRC
 
-Then you just need to add a keybinding to your custom persp, we use
-~SPC L o [your key here]~ (Perspective open <key>)
+Then you can access this persp with =SPC L o +=, where =+= is the binding.
 
-#+BEGIN_SRC emacs-lisp
-  (evil-leader/set-key "Lo<your key here>" 'custom-persp/<persp-function-name>)
-#+END_SRC
 
-* Predefined custom perspectives
+** Predefined custom perspectives
 
-*** Per project custom perpsective
-
-As the name suggests, this persp-projectile mode creates a new perspective
-once you switch to a new project with ~SPC p p~. It must be said that in the
-current implementation in order for this to work you must first open a
-custom-perspective like ~SPC L o e~ to go to the init.el in the spacemacs.
-
-#+BEGIN_SRC emacs-lisp 
-  (setq-default dotspacemacs-configuration-layers '(
-    (perspectives :variables
-                  perspective-enable-persp-projectile t)))
-#+END_SRC
 
 *** Org-agenda custom perspective
 
@@ -87,36 +132,31 @@ The cool part is that you can have many org files with todos in the agenda and
 with one simple command you can gather all the todos from all the agenda files
 you have and show them in a single buffer. (in evil the command starts with ~;a~)
 
-*** RCIRC custom perspective
+*** RCIRC/ERC custom perspective
 
-Now you can also open rcirc in a new layer to keep all the chat buffers in one
-perspective isolated from your work buffers.
+Now you can also open IRC in a new perspective to keep all the chat buffers in
+one perspective isolated from your work buffers.
 
-You will have to use the perspective layer as well as the rcirc layer:
+You will have to use the perspective layer as well as the rcirc/erc layer:
 
 #+BEGIN_SRC emacs-lisp
   (setq-default dotspacemacs-configuration-layers '(rcirc
+                                                    erc
+                                                    ;; you only need one of those layers
                                                     perspectives))
 #+END_SRC
 
-* Key Bindings
 
-Prefix command for perspective commands is ~SPC L~ (for Layout).
 
-| Key Binding | Description                                        |
-|-------------+----------------------------------------------------|
-| ~SPC L A~   | Add current buffer to the current perspective      |
-| ~SPC L c~   | Close a perspective (kill it)                      |
-| ~SPC L k~   | Remove current buffer from the current perspective |
-| ~SPC L n~   | Next perspective                                   |
-| ~SPC L p~   | Previous perspective                               |
-| ~SPC L r~   | Rename current perspective                         |
-| ~SPC L s~   | Switch to a perspective                            |
+* Configuration
+** Removing additional help
 
-** Custom Perspectives Key Bindings
+Once you know the key bindings to navigate between the workspaces you
+may want to disable the exhaustive help in the workspace micro-state.
+Set the variable =perspective-display-help= to =nil=
 
-| Key Binding | Description                                              |
-|-------------+----------------------------------------------------------|
-| ~SPC L o e~ | Emacs custom perspective                                 |
-| ~SPC L o i~ | RCIRC custom perspective (needs the rcirc layer enabled) |
-| ~SPC L o o~ | Org custom perspective                                   |
+#+BEGIN_SRC emacs-lisp
+  (setq-default dotspacemacs-configuration-layers
+    '((perspectives :variables perspective-display-help nil)))
+#+END_SRC
+
